# myth-hash

./: .bandit.yml  .mypy.ini  .pylintrc  README.md  main.py  makefile  myth_hash.py  myth_hash_test.py  noxfile.py  pyproject.toml  requirements-dev.txt  words.py
.github/workflows/: nox.yml
myth_hash/: cli.py
myth_hash/core/: character_data_loader.py
tests/: cli_test.py  myth_hash_test.py
